erDiagram

  %% ── ENTIDAD CENTRAL MINIMALISTA ───────────────────────────────

  %% Auditoria solo ancla el evento con un id y una fecha.
  %% Lo específico vive en cada tabla ternaria.
  Auditoria {
    UUID     id     PK
    DateTime fecha
  }

  %% ── TABLAS TERNARIAS ──────────────────────────────────────────

  %% personal_id nullable = acción del sistema (efecto colateral)
  %% datos_anteriores nullable = acción de registro (sin estado previo)

  AuditoriaPaciente {
    UUID auditoria_id  PK, FK  "FK → Auditoria.id"
    UUID paciente_id   FK
    UUID personal_id   FK     "nullable"
    Text accion               "registro / edicion"
    JSON datos_anteriores     "nullable"
    JSON datos_nuevos
  }

  AuditoriaAntecedente {
    UUID auditoria_id    PK, FK  "FK → Auditoria.id"
    UUID antecedente_id  FK
    UUID personal_id     FK     "nullable"
    Text accion                 "registro / edicion"
    JSON datos_anteriores       "nullable"
    JSON datos_nuevos
  }

  AuditoriaCita {
    UUID auditoria_id  PK, FK  "FK → Auditoria.id"
    UUID cita_id       FK
    UUID personal_id   FK     "nullable"
    Text accion               "registro / edicion_resultado / cancelacion"
    JSON datos_anteriores     "nullable"
    JSON datos_nuevos
  }

  AuditoriaInsumo {
    UUID auditoria_id  PK, FK  "FK → Auditoria.id"
    UUID insumo_id     FK
    UUID personal_id   FK     "nullable"
    Text accion               "registro / edicion / dispensacion"
    JSON datos_anteriores     "nullable"
    JSON datos_nuevos
  }

  AuditoriaDonante {
    UUID auditoria_id  PK, FK  "FK → Auditoria.id"
    UUID donante_id    FK
    UUID personal_id   FK     "nullable"
    Text accion               "registro / edicion"
    JSON datos_anteriores     "nullable"
    JSON datos_nuevos
  }

  AuditoriaDonacion {
    UUID auditoria_id  PK, FK  "FK → Auditoria.id"
    UUID donacion_id   FK
    UUID personal_id   FK     "nullable"
    Text accion               "registro / edicion"
    JSON datos_anteriores     "nullable"
    JSON datos_nuevos
  }

  %% Sin datos_anteriores: integridad contable — solo registro
  AuditoriaAsientoContable {
    UUID auditoria_id  PK, FK  "FK → Auditoria.id"
    UUID asiento_id    FK
    UUID personal_id   FK     "nullable"
    Text accion               "solo: registro"
    JSON datos_nuevos
  }

  %% Solo accion=registro — el récipe externo no se edita una vez registrado
  AuditoriaRecipeExterno {
    UUID auditoria_id        PK, FK  "FK → Auditoria.id"
    UUID recipe_externo_id   FK
    UUID personal_id         FK     "nullable"
    Text accion                     "registro"
    JSON datos_nuevos
  }

  %% Sin datos_anteriores ni datos_nuevos: registro de acceso de lectura
  %% Solo secretarios y administradores ejecutan estas consultas
  AuditoriaConsultaContable {
    UUID auditoria_id  PK, FK  "FK → Auditoria.id"
    UUID personal_id   FK
    Text tipo_consulta        "libro_diario / estado_resultados"
    JSON parametros           "nullable — filtros y rango de fechas"
  }

  AuditoriaPersonal {
    UUID auditoria_id  PK, FK  "FK → Auditoria.id"
    UUID personal_id   FK     "Personal auditado"
    UUID actor_id      FK     "Administrador que realizó la acción. [nullable]"
    Text accion               "registro / edicion / desactivacion / activacion"
    JSON datos_anteriores     "nullable — null en registro"
    JSON datos_nuevos
  }

  %% ── RELACIONES ────────────────────────────────────────────────

  Auditoria                 ||--o|   AuditoriaPaciente         : "especializa_en"
  Auditoria                 ||--o|   AuditoriaAntecedente      : "especializa_en"
  Auditoria                 ||--o|   AuditoriaCita             : "especializa_en"
  Auditoria                 ||--o|   AuditoriaInsumo           : "especializa_en"
  Auditoria                 ||--o|   AuditoriaDonante          : "especializa_en"
  Auditoria                 ||--o|   AuditoriaDonacion         : "especializa_en"
  Auditoria                 ||--o|   AuditoriaAsientoContable  : "especializa_en"
  Auditoria                 ||--o|   AuditoriaRecipeExterno    : "especializa_en"
  Auditoria                 ||--o|   AuditoriaConsultaContable : "especializa_en"
  Auditoria                 ||--o|   AuditoriaPersonal         : "especializa_en"

  AuditoriaPaciente         }o--||   Paciente                  : "audita"
  AuditoriaPaciente         }o--o|   Personal                  : "realizada_por"
  AuditoriaAntecedente      }o--||   Antecedente               : "audita"
  AuditoriaAntecedente      }o--o|   Personal                  : "realizada_por"
  AuditoriaCita             }o--||   Cita                      : "audita"
  AuditoriaCita             }o--o|   Personal                  : "realizada_por"
  AuditoriaInsumo           }o--||   Insumo                    : "audita"
  AuditoriaInsumo           }o--o|   Personal                  : "realizada_por"
  AuditoriaDonante          }o--||   Donante                   : "audita"
  AuditoriaDonante          }o--o|   Personal                  : "realizada_por"
  AuditoriaDonacion         }o--||   Donacion                  : "audita"
  AuditoriaDonacion         }o--o|   Personal                  : "realizada_por"
  AuditoriaAsientoContable  }o--||   AsientoContable           : "audita"
  AuditoriaAsientoContable  }o--o|   Personal                  : "realizada_por"
  AuditoriaRecipeExterno    }o--||   RecipeExterno             : "audita"
  AuditoriaRecipeExterno    }o--o|   Personal                  : "realizada_por"
  AuditoriaConsultaContable }o--||   Personal                  : "realizada_por"
  AuditoriaPersonal         }o--||   Personal                  : "auditado"
  AuditoriaPersonal         }o--o|   Personal                  : "actor"